2010-04-19  Murray Cumming  <murrayc@murrayc.com>

	Actor, Animation: Updated signals and propeties for clutter 1.2.
	
	* clutter/src/actor.hg: Added new signals and new properties, correcting 
	types of existing properties.
	* clutter/src/animation.hg: Added new properties.

2010-04-18  Murray Cumming  <murrayc@murrayc.com>

	Wrapped more new clutter 1.2 API.
	
	* clutter/src/animation.hg:
	* clutter/src/behaviour-ellipse.hg:
	* clutter/src/behaviour-rotate.hg:
	* clutter/src/behaviour-scale.hg:
	* clutter/src/clutter_methods.defs:
	* clutter/src/media.hg:
	* clutter/src/script.hg:
	* clutter/src/stage.hg:
	* clutter/src/text.hg:
	* clutter/src/timeline.hg:
	* clutter/src/types.[hg|ccg]: Added new (clutter 1.2) methods and 
	removed mentions of clutter funcitons that were removed (probably in clutter 
	1.0).

2010-04-18  Murray Cumming  <murrayc@murrayc.com>

	Actor: Wrapped new clutter 1.2 API.
	
	* clutter/src/clutter_enums.defs: Really regenerated with enums.pl
	* clutter/src/types.hg: Added TextDirection.
	* clutter/src/actor.[hg|ccg]: Added new methods from clutter 1.2.

2010-04-18  Murray Cumming  <murrayc@murray.com>

	Regenerated .defs files.

	* clutter/src/clutter_methods.defs: Regenerate with h2defs.py, against 
	clutter-1.2.
	* clutter/src/clutter_enums.defs: Regenerate with enums.pl
	* clutter/src/clutter_signals.defs: Regenerated with extra_defs_gen.
	* clutter/src/clutter_docs.xml: Regenerate with docextract_to_xml.py.

2010-04-16  Murray Cumming  <murrayc@murrayc.com>

    Remove deprecated function (we are not API stable).

    * clutter/cluttermm.h
    * clutter/filelist.am
	* clutter/cluttermm/utility.[h|cc]: Remove the utility.h API because 
    it only wraps one function that is now deprecated in clutter 1.2.
    
0.9.5:

2009-10-03  Daniel Elstner  <daniel.kitta@gmail.com>

	Increment cluttermm API version to 1.0

	* configure.ac (MM_INIT_MODULE): Change the module name from
	cluttermm-0.9 to cluttermm-1.0, following clutter.  Note that this