@@ -1,3 +1,10 @@
+2010-04-27  David King  <davidk@openismus.com>
+
+	Add main page to Doxygen documentation
+
+	* doc/Makefile.am: Parse clutter/cluttermm.h for documentation.
+	* clutter/cluttermm.h: Add main page to Doxygen documentation.
+
 2010-04-19  Murray Cumming  <murrayc@murrayc.com>
 
 	Actor, Animation: Updated signals and propeties for clutter 1.2.
